tests/ui/lint/snapshots/oversized_shift_uint32_left.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Shift amount exceeds integer width
   ╭─[test.lis:4:11]
 3 │   let x: uint32 = 1
 4 │   let _ = x << 40
   ·           ───┬───
   ·              ╰── shift exceeds width
 5 │ }
   ╰────
  help: `uint32` is 32 bits wide, so shifting by 40 discards every bit of the value · code: [infer.oversized_shift]
