tests/ui/lint/snapshots/printf_verb_mismatch_appendf.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Missing format arguments
   ╭─[test.lis:6:7]
 5 │   let mut b: Slice<byte> = []
 6 │   b = fmt.Appendf(b, "%d %d", 1)
   ·       ─────────────┬────────────
   ·                    ╰── 2 verbs, 1 argument
 7 │   let _ = b
   ╰────
  help: `fmt.Appendf` has 2 verbs but 1 argument, so `%d` prints as `%!d(MISSING)`. Add the missing argument, remove the verb, or write `%%` for a literal percent sign · code: [lint.printf_verb_mismatch]
