tests/ui/lint/snapshots/printf_verb_mismatch_extra_argument.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Extra format arguments
   ╭─[test.lis:5:3]
 4 │ fn main() {
 5 │   fmt.Printf("hello\n", 1)
   ·   ────────────┬───────────
   ·               ╰── 0 verbs, 1 argument
 6 │ }
   ╰────
  help: `fmt.Printf` has 0 verbs but 1 argument, so the extra argument prints as `%!(EXTRA ...)` at the end of the output. Add a verb for it or remove it · code: [lint.printf_verb_mismatch]
