tests/ui/lint/snapshots/printf_verb_mismatch_fprintf_skips_writer.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Missing format arguments
   ╭─[test.lis:6:11]
 5 │ fn main() {
 6 │   let _ = fmt.Fprintf(os.Stdout, "%d %d\n", 1)
   ·           ──────────────────┬─────────────────
   ·                             ╰── 2 verbs, 1 argument
 7 │ }
   ╰────
  help: `fmt.Fprintf` has 2 verbs but 1 argument, so `%d` prints as `%!d(MISSING)`. Add the missing argument, remove the verb, or write `%%` for a literal percent sign · code: [lint.printf_verb_mismatch]
