tests/ui/lint/snapshots/printf_verb_mismatch_hex_escaped_percent_missing_argument.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Missing format arguments
   ╭─[test.lis:5:3]
 4 │ fn main() {
 5 │   fmt.Printf("\x25d\n")
   ·   ──────────┬──────────
   ·             ╰── 1 verb, 0 arguments
 6 │ }
   ╰────
  help: `fmt.Printf` has 1 verb but 0 arguments, so `%d` prints as `%!d(MISSING)`. Add the missing argument, remove the verb, or write `%%` for a literal percent sign · code: [lint.printf_verb_mismatch]
